<?xml version="1.0"?>
<package format="2">
  <name>simulator_dummy</name>
  <version>0.0.0</version>

  <description>A Dummy Package</description>

  <maintainer email="jared.l.strader@gmail.com">jared</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
